# wasm-mergers

./: .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
.github/workflows/: build-test.yml
src/: error.rs  kinds.rs  lib.rs  merge_builder.rs  merge_configuration.rs  merge_options.rs  named_module.rs
src/error/: mod.rs
src/kinds/: mod.rs
src/merge_builder/: mod.rs
src/merge_configuration/: mod.rs
src/merge_options/: mod.rs
src/merger/: mod.rs  old_to_new_mapping.rs  provenance_identifier.rs  walrus_copy.rs
src/merger/old_to_new_mapping/: mod.rs
src/merger/walrus_copy/: mod.rs
src/named_module/: mod.rs
src/resolver/: dependency_reduction.rs  error.rs  mod.rs
src/resolver/dependency_reduction/: mod.rs
src/resolver/graph_resolution/: dependency_reduction.rs
src/resolver/identified_resolution_schema/: mod.rs
src/resolver/resolution_schema/: mod.rs
tests/: composition_of_cross_deps.rs  even.wat  even_odd.wat  lib.rs  merge_cross_module_fibonacci.rs  merge_pass_through_module.rs  mutual_recursion.rs  odd.wat  smithed_tests.rs  wasmtime_macros.rs
