[package]
name = "webassembly-mergers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
thiserror = { version = "2.0.12" }
walrus = { version = "0.23.3" }
derive_more = { version = "2", features = ["from", "into", "display"] }

[dev-dependencies]
wasmtime = { version = "34.0" }
wat = { version = "1.235.0" }
itertools = "0.14.0"
wasm-smith = { version = "0.235.0" }
arbitrary = { version = "1.4.1" }
rand = { version = "0.9.1" }
rand_chacha = { version = "0.9.0" }
rayon = { version = "1.10.0" }
