[package]
name = "webassembly-mergers"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
keywords = ["wasm", "webassembly", "merge", "merger", "linker", "bundler"]
categories = ["wasm", "development-tools"]
description = """
A Rust crate developed to merge WebAssembly binaries.
Similar to a linker or a bundler for JavaScript modules.
"""

[dependencies]
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0" }
walrus = { version = "0.23.3" }
derive_more = { version = "2", features = ["from", "into", "display"] }
petgraph = { version = "0.8.2" }

[dev-dependencies]
wasmtime = { version = "38.0" }
wat = { version = "1.239.0" }
itertools = "0.14.0"
wasm-smith = { version = "0.241" }
arbitrary = { version = "1.4.2" }
rand = { version = "0.9.2" }
rand_chacha = { version = "0.9.0" }
rayon = { version = "1.11.0" }
conv = "0.3.3"
