[package]
name = "wasm-mergers"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
keywords = ["wasm", "webassembly", "merge", "merger", "linker", "bundler"]
categories = ["wasm", "development-tools"]
description = """
A Rust crate developed to merge WebAssembly binaries.
Similar to a linker or a bundler for JavaScript modules.
"""

[dependencies]
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
walrus = { version = "0.24" }
derive_more = { version = "2", features = ["from", "into", "display"] }
petgraph = { version = "0.8" }

[dev-dependencies]
wasmtime = { version = "41" }
wat = { version = "1.244" }
itertools = "0.14"
wasm-smith = { version = "0.244" }
arbitrary = { version = "1.4.2" }
rand = { version = "0.10" }
rand_chacha = { version = "0.10" }
rayon = { version = "1" }
conv = "0.3"
